--- a/templates/inc/_header.html
+++ b/templates/inc/_header.html
@@ -19,7 +19,7 @@
                             </li>
 
                             <li class="header__nav-item">
-                                <a class="header__nav-link" href="{% url 'catalog' %}" role="button" aria-haspopup="true"
+                                <a class="header__nav-link" href="{% url 'catalog' 1 %}" role="button" aria-haspopup="true"
                                    aria-expanded="false">Каталог</a>
                             </li>
                             <!-- end dropdown -->
