Капча для отзывов

--- a/web_site/templates/web_site/index.html
+++ b/web_site/templates/web_site/index.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-{% load static %}
-{% load web_site_tags %}
+{% load static web_site_tags %}
 {% block title %}
 Main page
 {% endblock %}
