--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-{% load static %}
-{% load web_site_tags %}
+{% load static web_site_tags recaptcha3 %}
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -31,7 +30,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <title>{% block title%} {% endblock %}</title>
-
+    {% recaptcha_init %}
+    {% recaptcha_ready action_name='homepage' %}
 </head>
 <body class="body">
 {% include 'inc/_header.html' %}
