--- a/templates/inc/_header.html
+++ b/templates/inc/_header.html
@@ -39,7 +39,7 @@
                                    aria-expanded="false"><i class="icon ion-ios-more"></i></a>
 
                                 <ul class="dropdown-menu header__dropdown-menu" aria-labelledby="dropdownMenuMore">
-                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="{% url 'about' %}">About</a></li>
                                     <li><a href="404.html">404 Page</a></li>
                                 </ul>
                             </li>
