--- a/static/css/main.css
+++ b/static/css/main.css
@@ -352,6 +352,15 @@ ul {
 .header__dropdown-menu li {
   padding: 0;
 }
+.header__dropdown-menu li.change_lang {
+  padding: 0;
+  font-size: 16px;
+  color: rgba(255,255,255,0.75);
+  line-height: 40px;
+  display: block;
+  font-weight: 300;
+}
+
 .header__dropdown-menu a {
   font-size: 16px;
   color: rgba(255,255,255,0.75);
@@ -3768,4 +3777,26 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
 }
 .errorlist {
   color: white;
+}
+
+.choise_lang {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+.change_submt{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 100%;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
+  -webkit-box-shadow: 0 0 20px 0 rgb(255 88 96 / 50%);
+  box-shadow: 0 0 20px 0 rgb(255 88 96 / 50%);
+  opacity: 0.85;
+  color: #fff;
 }
