--- a/web_site/templates/web_site/about.html
+++ b/web_site/templates/web_site/about.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load i18n static %}
 
 {% block title %}
 О нас
@@ -13,13 +13,13 @@
 				<div class="col-12">
 					<div class="section__wrap">
 						<!-- section title -->
-						<h2 class="section__title">О нас</h2>
+						<h2 class="section__title">{% trans 'О нас' %}</h2>
 						<!-- end section title -->
 
 						<!-- breadcrumb -->
 						<ul class="breadcrumb">
-							<li class="breadcrumb__item"><a href="{% url 'home' %}">Домой</a></li>
-							<li class="breadcrumb__item breadcrumb__item--active">О нас</li>
+							<li class="breadcrumb__item"><a href="{% url 'home' %}">{% trans 'Домой' %}</a></li>
+							<li class="breadcrumb__item breadcrumb__item--active">{% trans 'О нас' %}</li>
 						</ul>
 						<!-- end breadcrumb -->
 					</div>
