--- a/web_site/templates/web_site/index.html
+++ b/web_site/templates/web_site/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load static web_site_tags %}
+{% load i18n static web_site_tags %}
 {% block title %}
 Main page
 {% endblock %}
@@ -19,7 +19,7 @@ Main page
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="home__title"><b>Лучшие фильмы</b> этого сезона</h1>
+                <h1 class="home__title"><b>{% trans 'Лучшие фильмы' %}</b> {% trans 'этого сезона' %}</h1>
 
                 <button class="home__nav home__nav--prev" type="button">
                     <i class="icon ion-ios-arrow-round-back"></i>
@@ -73,25 +73,25 @@ Main page
             <div class="row">
                 <div class="col-12">
                     <!-- content title -->
-                    <h2 class="content__title">Новинки</h2>
+                    <h2 class="content__title">{% trans 'Новинки' %}</h2>
                     <!-- end content title -->
 
                     <!-- content tabs nav -->
                     <ul class="nav nav-tabs content__tabs" id="content__tabs" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1"
-                               aria-selected="true">Премьеры</a>
+                               aria-selected="true">{% trans 'Премьеры' %}</a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2"
-                               aria-selected="false">Фильмы</a>
+                               aria-selected="false">{% trans 'Фильмы' %}</a>
                         </li>
 
 
                         <li class="nav-item">
                             <a class="nav-link" data-toggle="tab" href="#tab-4" role="tab" aria-controls="tab-4"
-                               aria-selected="false">Мультфильмы</a>
+                               aria-selected="false">{% trans 'Мультфильмы' %}</a>
                         </li>
                     </ul>
                     <!-- end content tabs nav -->
@@ -108,15 +108,15 @@ Main page
                             <ul class="nav nav-tabs" role="tablist">
                                 <li class="nav-item"><a class="nav-link active" id="1-tab" data-toggle="tab"
                                                         href="#tab-1" role="tab" aria-controls="tab-1"
-                                                        aria-selected="true">ПРЕМЬЕРЫ</a></li>
+                                                        aria-selected="true">{% trans 'ПРЕМЬЕРЫ' %}</a></li>
 
                                 <li class="nav-item"><a class="nav-link" id="2-tab" data-toggle="tab" href="#tab-2"
                                                         role="tab" aria-controls="tab-2"
-                                                        aria-selected="false">ФИЛЬМЫ</a></li>
+                                                        aria-selected="false">{% trans 'ФИЛЬМЫ' %}</a></li>
 
 
                                 <li class="nav-item"><a class="nav-link" id="4-tab" data-toggle="tab" href="#tab-4"
-                                                        role="tab" aria-controls="tab-4" aria-selected="false">МУЛЬТФИЛЬМЫ</a>
+                                                        role="tab" aria-controls="tab-4" aria-selected="false">{% trans 'МУЛЬТФИЛЬМЫ' %}</a>
                                 </li>
                             </ul>
                         </div>
