--- a/templates/inc/_header.html
+++ b/templates/inc/_header.html
@@ -26,7 +26,7 @@
 
 
                             <li class="header__nav-item">
-                                <a href="faq.html" class="header__nav-link">{% trans 'Помощь' %}</a>
+                                <a href="{% url 'help_page' %}" class="header__nav-link">{% trans 'Помощь' %}</a>
                             </li>
 
                             <li class="header__nav-item">
