--- a/web_site/templates/web_site/directors_detail.html
+++ b/web_site/templates/web_site/directors_detail.html
@@ -37,7 +37,7 @@
                             <div class="card__content">
                                 <ul class="card__meta">
                                     <li><span>{% trans 'Возраст' %}:</span> {{ director.age }}</li>
-                                    <li><span>{% trans 'Биография' %}}:</span></li>
+                                    <li><span>{% trans 'Биография' %}:</span></li>
 
                                 </ul>
 
@@ -77,7 +77,7 @@
             <div class="tab-pane fade show active" id="tab-2" role="tabpanel" aria-labelledby="2-tab">
                 <div class="row">
                     <!-- card -->
-                    {% for movie in director_movie_lst %}
+                    {% for movie in object_list %}
                     <div class="col-6 col-sm-4 col-lg-3 col-xl-2">
                         <div class="card">
                             <div class="card__cover">
@@ -97,16 +97,15 @@
                                 <span class="card__rate"><i class="icon ion-ios-star"></i>{{ movie.kinopoisk_rating }}</span>
                             </div>
                         </div>
-
                     </div>
                     <!-- end card -->
                     {% endfor%}
                 </div>
             </div>
-
-
+            {% include 'inc/_paginator.html' %}
         </div>
         <!-- end content tabs -->
     </div>
+
 </section>
 {% endblock %}
