--- a/templates/inc/_paginator.html
+++ b/templates/inc/_paginator.html
@@ -101,6 +101,40 @@
             {% endif %}
         </ul>
     </div>
+{% elif actor %}
+    <div class="col-12">
+        <ul class="paginator paginator--list">
+            {% if page_obj.has_previous %}
+                {% if page_obj.number|add:'-3' > 1 %}
+                    <li class="paginator__item">
+                        <a href="{% url 'actor_detail' actor.slug 1 %}">1</a>
+                    </li>
+                {% endif %}
+                {% if page_obj.number|add:'-3' >= 3 %}
+                    <li class="paginator__item"><a href="{% url 'actor_detail' actor.slug page_obj.previous_page_number|add:'-3' %}">• • •</a></li>
+                {% endif %}
+            {% endif %}
+            {% if paginator.page_range|length > 1 %}
+                {% for i in paginator.page_range %}
+                    {% if page_obj.number == i %}
+                        <li class="paginator__item paginator__item--active"><a href="{% url 'actor_detail' actor.slug i %}">{{ i }}</a></li>
+                    {% elif i > page_obj.number|add:'-4' and i < page_obj.number|add:'4' %}
+                        <li class="paginator__item"><a href="{% url 'actor_detail' actor.slug i %}">{{ i }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+            {% if page_obj.has_next %}
+                {% if page_obj.number|add:'4' < page_obj.paginator.num_pages %}
+                    <li class="paginator__item"><a href="{% url 'actor_detail' actor.slug page_obj.next_page_number|add:'3' %}">• • •</a></li>
+                {% endif %}
+                {% if page_obj.number|add:'3' < page_obj.paginator.num_pages %}
+                    <li class="paginator__item"><a class="pagination__link" href="{% url 'actor_detail' actor.slug page_obj.paginator.num_pages %}">
+                    {{ page_obj.paginator.num_pages }}</a>
+                    </li>
+                {% endif %}
+            {% endif %}
+        </ul>
+    </div>
 {% else %}
     <div class="col-12">
         <ul class="paginator paginator--list">
