--- a/web_site/templates/web_site/actor_detail.html
+++ b/web_site/templates/web_site/actor_detail.html
@@ -77,7 +77,7 @@
             <div class="tab-pane fade show active" id="tab-2" role="tabpanel" aria-labelledby="2-tab">
                 <div class="row">
                     <!-- card -->
-                    {% for movie in actor_movie_lst %}
+                    {% for movie in object_list %}
                     <div class="col-6 col-sm-4 col-lg-3 col-xl-2">
                         <div class="card">
                             <div class="card__cover">
@@ -103,8 +103,7 @@
                     {% endfor %}
                 </div>
             </div>
-
-
+         {% include 'inc/_paginator.html' %}
         </div>
         <!-- end content tabs -->
     </div>
