страница 404, мелкие правки перевода, вывод ошибок в формах

--- a/web_site/templates/web_site/actor_detail.html
+++ b/web_site/templates/web_site/actor_detail.html
@@ -2,7 +2,7 @@
 {% load static i18n %}
 
 {% block title %}
-Актёр: {{ actor.name }}
+{% trans 'Актёр' %}: {{ actor.name }}
 {% endblock %}
 
 {% block content %}
