--- a/web_site/templates/web_site/directors_detail.html
+++ b/web_site/templates/web_site/directors_detail.html
@@ -2,7 +2,7 @@
 {% load i18n static %}
 
 {% block title %}
-Режиссёр: {{ director.name }}
+{% trans 'Режиссёр' %}: {{ director.name }}
 {% endblock %}
 
 {% block content %}
