--- a/web_site/templates/web_site/index.html
+++ b/web_site/templates/web_site/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n static web_site_tags %}
 {% block title %}
-Main page
+{% trans 'Main page' %}
 {% endblock %}
 
 {% block content %}
