--- a/web_site/templates/web_site/catalog_movies.html
+++ b/web_site/templates/web_site/catalog_movies.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n static web_site_tags %}
 {% block title %}
-Каталог фильмов
+{% trans 'Каталог фильмов' %}
 {% endblock %}
 
 {% block content %}
