--- a/web_site/templates/web_site/help_page.html
+++ b/web_site/templates/web_site/help_page.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load  static  %}
 {% block title %}
-Помощь
+{% trans 'Помощь' %}
 {% endblock %}
 
 {% block content %}
